--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 ],
             typeSpeed: 140,
             // backSpeed: 50,
-            // startDelay: 10000,
+            startDelay: 10000,
             loop: false,
 
             
