--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                 // "`Porcia`<br>Where r u, Lulu? `🧐``🧐`<br><br>`Lulu`<br>Next to u. Wt? `🤷🏻‍♀`<br><br>`Porcia`<br>Nth. Where r Log G and Wendy? `😛`<br>",
                 // "Porcia: Where r u, Lulu? `🧐``🧐`<br>Lulu: Next to u. Wt? `🤷🏻‍♀`<br>Porcia: Nth.Where r Log G and Wendy? `😛`<br>Lulu: Next to me. `😌`<br>Log G: Porcia,Where r u sitting?`🧐``🧐` <br>Lulu: Next to me. `😜`<br>Log G: Where r u? `🤔`<br>Wendy: Next to u, dude! `😅`<br>Porcia: U r next to me, wendy? <br> Wendy: I’m next to Lulu, where r u sitting ?`😓` <br>Kenny: Soooooooooo slpy,`💤``💤``💤``💤 `who’s next to me ? `🤔``🤔`<br>David: Am next to the door…. `😛`<br>Sherry: Huh? I’m at the door, who else near the door? `🤨``🤨`<br>Kenny: Where????????`🤯`<br>Lulu: So slpy… `💤``💤`Stay up until 2am to study arrrrr! `🤦🏻‍♀``🤦🏻‍♀`<br>Wendy: R u next to me? Hate staying up to study for tests … `😫``😫`<br>Kenny: In front of u, dude!`🙌🏻 `<br>Porcia: Hey! Can anyone help explain F=Ma `🤯``🤯``🤯`<br>Log G: Easy, man! `😏`<br>Sherry: R u here ? `🧐`<br>Log G: On the handrail lor`🤭`<br>Sherry: Which one? `🤔` <br>Porcia: Nvm, explain F=Ma la! `😵`<br>Wendy: Explain la X 2 `🤦🏻‍♀`<br>Kenny: Explain la X 3 `🙇🏻‍♂`<br>Sherry: Explain la X 4 `🙌🏻`<br>Log G: U guys asking me ? `🤔``🤔``🤔``🤔``🤔`<br>"
                 ],
-            typeSpeed: 140,
+            // typeSpeed: 110,
+            typeSpeed: 95,
             // backSpeed: 50,
             startDelay: 10000,
             loop: false,
